--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 server.port=8083
 spring.data.mongodb.auto-index-creation=true
-
+db.bul
